# cpp-oop-kursinis-v2

./: CMakeLists.txt  main.cpp  paraiska.cpp  paraiska.h  paraiskos.txt  sistema.cpp  sistema.h  ukininkas.cpp  ukininkas.h  vertintojas.cpp  vertintojas.h
